--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/kayak/jobs/4369302002'>Job Application for Intern at KAYAK</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/kayak/jobs/4369305002'>Job Application for Intern at KAYAK</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://lumc.recruitee.com/l/nl/o/postdoc-interne-geneeskunde-b19mbeo72'>
       Postdoc Interne Geneeskunde  (B.19.MB.EO.72) - LUMC
     </a></h5> 
@@ -69,7 +77,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dsst/jobs/1464505'>Job Application for Coordinator of College Success- Internships (2019-2020) at DSST</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -85,7 +93,7 @@
 <p><span class="badge badge-light">NYC Paris London Milan Los Angeles Tokyo Madrid</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -147,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atlassian/f6a34ac2-47ed-4221-bfd0-577b6ed5a29e'>Atlassian - Workplace Productivity Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlassian/f6a34ac2-47ed-4221-bfd0-577b6ed5a29e'>Atlassian - Workplace Productivity Intern</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -167,11 +175,11 @@
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787218'>Job Application for Customer Success Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787218'>Job Application for Customer Success Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -183,7 +191,7 @@
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787233'>Job Application for Strategic Alliances Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787233'>Job Application for Strategic Alliances Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -231,15 +239,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://frosch-travel.workable.com/j/A7B6CD755E'>FROSCH TRAVEL - Jobs: Human Resources Intern - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frosch-travel.workable.com/j/A7B6CD755E'>FROSCH TRAVEL - Jobs: Human Resources Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o3BCafwa'>Carri?res Trek Bicycle - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -267,7 +275,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4369984002'>Job Application for Internship in Payroll &amp; Accounting - German fluency required at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,7 +340,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221570-customer-success-intern-marketing-client'>EASYRECRUE Customer Success Intern / Marketing client | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221570-customer-success-intern-marketing-client'>EASYRECRUE Customer Success Intern / Marketing client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -428,7 +436,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/JYdQotAbz6/Intern-Development-Nothing-But-Nets'>Intern, Development, Nothing But Nets - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/JYdQotAbz6/Intern-Development-Nothing-But-Nets'>Intern, Development, Nothing But Nets - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -440,7 +448,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/a3pOVFXv29/Intern-Council-Of-Women-World-Leaders'>Intern, Council of Women World Leaders - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/a3pOVFXv29/Intern-Council-Of-Women-World-Leaders'>Intern, Council of Women World Leaders - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -451,16 +459,6 @@ Stuart.</p>
 <h5><a href='http://unitednationsfoundation.applytojob.com/apply/lNZsA0FBI9/Intern-Advocacy-And-Community-Engagement-UNAUSA'>Intern, Advocacy and Community Engagement, UNA-USA - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJq9VfwX&k=Job&j=ogV9afwe&__jvst=Employee&__jvsd=sO7z2gwh&__jvsc=Twitter&bid=ncawSKwZ'>GroupM Careers - GroupM | HR Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/meero/38e72eef-bfd9-49e3-9525-311685c786f3'>Meero - Operations/Data management Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... Operations/Data management Intern. Bangalore. Delivery ? Operations. 
-Internship. Apply for this job. Founded in 2016, Meero aims to revolutionize the 
-world of?...</p>
 <hr/>
 
 
