--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4351741002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4351741002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692045284-speech-language-pathologist-school-based-position'>Theracare INC Speech Language Pathologist - School Based Position | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692045284-speech-language-pathologist-school-based-position'>Theracare INC Speech Language Pathologist - School Based Position | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -151,7 +151,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/1Legacy1/743999687097675-speech-therapist'>1 Legacy Speech Therapist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/1Legacy1/743999687097675-speech-therapist'>1 Legacy Speech Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -181,7 +181,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
 today!</p>
 <hr/>
-<h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6342/part-time-speech-language-pathologist---shreveport%2C-la/job'>Part Time Speech Language Pathologist - Shreveport, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 7, 2019 ... WW - Heritage Manor West is now hiring a Part Time Speech Language 
 Pathologist - Shreveport, LA in Shreveport, Louisiana. Review all of the job 
@@ -214,7 +214,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stjhs.referrals.selectminds.com/jobs/speech-language-pathologist-cancer-center-full-time-days-8hr-40751'>Speech Language Pathologist (Cancer Center) - Full time, Days, 8hr - St. Joseph Health Careers</a></h5> 
+<h5><a href='https://stjhs.referrals.selectminds.com/jobs/speech-language-pathologist-cancer-center-full-time-days-8hr-40751'>Speech Language Pathologist (Cancer Center) - Full time, Days, 8hr - St. Joseph Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -313,7 +313,7 @@ details?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4339749002'>Job Application for Speech Language Pathologist (SLP) - Senior Living at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4339749002'>Job Application for Speech Language Pathologist (SLP) - Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Rockville, MD Montgomery</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -338,7 +338,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691175816-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999691175816-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -358,7 +358,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ivyrehab/job/oXnqafwE'>IvyRehab Physical Therapy, PLLC Careers - Clinic Director - Speech Language Pathologist (Pediatrics) - Forest Lakes</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ivyrehab/job/oXnqafwE'>IvyRehab Physical Therapy, PLLC Careers - Clinic Director - Speech Language Pathologist (Pediatrics) - Forest Lakes</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -398,7 +398,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -446,7 +446,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4336149002'>Job Application for Speech Language Pathologist (SLP) - Senior Living Visits at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4336149002'>Job Application for Speech Language Pathologist (SLP) - Senior Living Visits at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Mechanicsburg, PA</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
